@@ -18,6 +18,7 @@ The following major changes have been made since 0.9.9:
     distributions' RPM packaging hardening flags to the compiler and linker
  *) lkrg-logctl: Support and report continuation lines (an extra one-character
     field indicating whether the line is a new message or a continuation)
+ *) lkrg-logger: Make logs group-readable
 
 
 The following major changes have been made between LKRG 0.9.8 and 0.9.9:
